kubernetes/deployment-web.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   annotations:
#     kompose.cmd: kompose convert
#     kompose.version: 1.22.0 (955b78124)
#   creationTimestamp: null
#   labels:
#     io.kompose.service: web
#   name: web
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       io.kompose.service: web
#   strategy: {}
#   template:
#     metadata:
#       annotations:
#         kompose.cmd: kompose convert
#         kompose.version: 1.22.0 (955b78124)
#       creationTimestamp: null
#       labels:
#         io.kompose.service: web
#     spec:
#       containers:
#         - env:
#             - name: DB_URI
#               value: mysql+pymysql://root:root@db:3306/flaskshop?charset=utf8mb4
#             - name: ESEARCH_URI
#               value: esearch
#             - name: REDIS_URI
#               value: redis://redis:6379
#           image: wahaj123/python:v1
#           name: web
#           ports:
#             - containerPort: 5000
#           resources: {}
#       restartPolicy: Always
# status: {}

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - env:
            - name: DB_URI
              value: mysql+pymysql://root:root@db:3306/flaskshop?charset=utf8mb4
            # - name: ESEARCH_URI
            #   value: esearch
            # - name: REDIS_URI
            #   value: redis://redis:6379
          name: web
          image: wahaj123/python:v1
          ports:
          - containerPort: 5000
