kubernetes/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  type: NodePort
  ports:
    - nodePort: 30010
      port: 5000
      targetPort: 5000
